--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
     <ul>
     <nav>
   </div>
+    <img SIC = "https://pt.quizur.com/_image?href=https://img.quizur.com/f/img5ff5cf7adbe4e6.99703718.jpg?lastEdited=1609944965&w=600&h=600&f=webp">
   </body>
 </html>
