--- a/index.html
+++ b/index.html
@@ -7,17 +7,21 @@
     <title> CONFEITARIA </title>
   </head>
   <body>
-    <div>
-    <h1>DESAFIO ZOIOS AZUIS</h1>
-    <nav>
-    <ul>
-        <li> Inicio </li>
-        <li> Drogas </li>
-        <li> Reliquias </li>
-        <li> Desafios </li>
-    <ul>
-    <nav>
-  </div>
+    <header>
+      <div>
+        <h1>DESAFIO ZOIOS AZUIS</h1>
+        <nav>
+            <ul>
+              <li> Inicio </li>
+              <li> Residuos </li>
+              <li> Reliquias </li>
+              <li> Desafios </li>
+            <ul>
+          <nav>
+        </div>
+  </header>
+  <div>
     <img SIC = "https://pt.quizur.com/_image?href=https://img.quizur.com/f/img5ff5cf7adbe4e6.99703718.jpg?lastEdited=1609944965&w=600&h=600&f=webp">
-  </body>
+  </div>
+</body>
 </html>
