--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
   </header>
   <div>
-    <img SIC = "https://pt.quizur.com/_image?href=https://img.quizur.com/f/img5ff5cf7adbe4e6.99703718.jpg?lastEdited=1609944965&w=600&h=600&f=webp">
+    <img src = "https://pt.quizur.com/_image?href=https://img.quizur.com/f/img5ff5cf7adbe4e6.99703718.jpg?lastEdited=1609944965&w=600&h=600&f=webp">
   </div>
 </body>
 </html>
