--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
           <nav>
         </div>
   </header>
-  <div>
-    <img src = "https://pt.quizur.com/_image?href=https://img.quizur.com/f/img5ff5cf7adbe4e6.99703718.jpg?lastEdited=1609944965&w=600&h=600&f=webp">
+  <div style="display: flex; width: 100%;">
+    <img style="margin: auto;" src = "https://pt.quizur.com/_image?href=https://img.quizur.com/f/img5ff5cf7adbe4e6.99703718.jpg?lastEdited=1609944965&w=600&h=600&f=webp">
   </div>
 </body>
 </html>
