--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <title> CONFEITARIA </title>
   </head>
-  <body>
+  <body class="banana">
     <header>
       <div>
         <h1>DESAFIO ZOIOS AZUIS</h1>
