--- a/index.html
+++ b/index.html
@@ -23,5 +23,15 @@
   <div style="display: flex; width: 100%;">
     <img style="margin: auto;" src = "https://pt.quizur.com/_image?href=https://img.quizur.com/f/img5ff5cf7adbe4e6.99703718.jpg?lastEdited=1609944965&w=600&h=600&f=webp">
   </div>
+  <div style="display: flex; width: 100%;">
+    <input type="text" id="vinicin">
+    <button onclick="olhosAzuis(document.getElementById('vinicin').value)">CLIQUE EM MIM</button>
+  </div>
 </body>
+
+<script>
+  function olhosAzuis(texto){
+    alert(texto);
+  }
+</script>
 </html>
