--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h1>DESAFIO ZOIOS AZUIS</h1>
         <nav>
             <ul>
-              <li> Inicio </li>
+              <li> <a href="https://cineveracruz.com.br/">Inicio</a> </li>
               <li> Residuos </li>
               <li> Reliquias </li>
               <li> Desafios </li>
